--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <header>
