--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
     </main>
     <footer>
-        <small>© 2020 Profile</small>
+        <p><small>© 2020 Profile</small></p>
     </footer>
 </body>
 </html>
